--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             <div id="countdown-timer" class="retro-clock">
                 <span id="years">00</span> years,
                 <span id="months">00</span> months,
-                <span id="days">00</span> days, and
-                <span id="seconds">00</span> seconds
+                <span id="days">00</span> days,
+                <span id="hours">00</span> hours,
+                <span id="minutes">00</span> minutes, and
+                <span id="seconds">00</span> seconds to go
             </div>
         </div>
     </div>
