updates to months

--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tick Tock</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="content">
-        <h1>San Francisco Is Mandated to Build 82,000 New Homes By 2031</h1>
-        <div class="countdown">
-            <div id="countdown-timer" class="retro-clock">
-                <span id="years">00</span> years,
-                <span id="months">00</span> months,
-                <span id="days">00</span> days,
-                <span id="hours">00</span> hours,
-                <span id="minutes">00</span> minutes, and
-                <span id="seconds">00</span> seconds to go
-            </div>
+      <h1>San Francisco Is Mandated to Build 82,000 New Homes By 2031</h1>
+      <div class="countdown">
+        <div id="countdown-timer" class="retro-clock">
+          <span id="years">00</span>
+          years,
+          <span id="months">00</span>
+          <span id="months-label">months,</span>
+          
+          <span id="days">00</span>
+          days,
+          <span id="hours">00</span>
+          hours,
+          <span id="minutes">00</span>
+          minutes, and
+          <span id="seconds">00</span>
+          seconds
         </div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
