updated "to go"

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <span id="minutes">00</span>
           minutes, and
           <span id="seconds">00</span>
-          seconds
+          seconds to go
         </div>
       </div>
     </div>
